# ccdr-ingestion-workflow

./: .gitignore  README.md  add_bbox.py  debug_test.py  dump_pages.py  generate_content_blocks.py  generate_html.py  generate_relations.py  generate_structured_nodes.py  ingest_ccdrs.py  main.py  pyproject.toml  schema.md  schema_legacy.md  schema_revision.md
blocks_maker/: extract_drawings_by_bbox.py  extract_images.py  reclassify_blocks.py  style_text_blocks.py
fixup/: fixup_tocs.py  upscale_images.py
html_maker/: first_pass.py  fixup_pass.py  provide_feedback.py  restructure_with_CC.py  restructure_with_CC_service.py  restructure_with_OC_service.py  restructure_with_recursion  restructure_with_recursion.py
nodes_maker/: generate_embeddings.py  upload_to_db.py
pdf_parsing_eval/: add_bbox.py  clean_html.py  combine_blocks.py  convert_to_html.py  convert_to_pseudo_html.py  create_relations.py  detect_structure.py  dump_pages.py  extract_images.py  extract_svgs.py  extract_text_blocks.py  html_to_graph.py  models.py  process_html.py
sample_data/: components.json  content_nodes.json  relations.json
tests/: conftest.py  test_classify_section_types.py  test_html_revision.py  test_llm_filtered_pictures.py  test_map_page_numbers.py  test_page_number_mapping.py
transform/: classify_section_types.py  clean_html.py  combine_blocks.py  convert_to_html.py  create_relations.py  describe_images.py  detect_nested_structure.py  detect_structure.py  detect_top_level_structure.py  extract_drawings_by_bbox.py  extract_images.py  extract_layout.py  extract_svgs.py  extract_text_blocks.py  generate_embeddings.py  html_to_graph.py  map_page_numbers.py  map_page_numbers_w_llm.py  models.py  reclassify_blocks.py  restructure_agentically.py  restructure_with_CC.py  restructure_with_CC_service.py  restructure_with_OC_service.py  style_text_blocks.py  upload_to_db.py
utils/: aws.py  claude_code_client.py  db.py  eval.py  file_editor.py  html.py  json.py  (+6 more)
(+9 files in other folders)
