[project]
name = "ccdr-ingestion-workflow"
version = "0.0.1"
description = "Complete workflow to transform the World Bank Country and Climate Development Reports (CCDRs) to a RAG-friendly schema and upload them to PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.72.6.post2",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pymupdf>=1.26.0",
    "tenacity>=9.1.2",
]
