[project]
name = "ccdr-ingestion-workflow"
version = "0.0.1"
description = "Complete workflow to transform the World Bank Country and Climate Development Reports (CCDRs) to a RAG-friendly schema and upload them to PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "boto3>=1.39.9",
    "cairosvg>=2.8.2",
    "litellm>=1.72.6.post2",
    "numpy>=2.3.1",
    "pillow>=11.2.1",
    "playwright>=1.53.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pymupdf>=1.26.0",
    "reportlab>=4.4.2",
    "roman>=5.1",
    "sqlmodel>=0.0.24",
    "svgelements>=1.9.6",
    "svglib>=1.5.1",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.2",
    "types-boto3[s3]>=1.39.9",
    "types-requests>=2.32.4.20250611",
]
